10-platform/regenera-platform-kubernetes/docs/source-material/virtual-service-canary.yaml
# |---------------------------------------------------------------------------------------|
# |  --> REGENERA ENTERPRISE SYSTEM v4.0                                                  |
# |---------------------------------------------------------------------------------------|
#
# PROJECT:       Regenera Bank
# CEO:           Raphaela Cerveski
# DEVELOPER:     Don Paulo Ricardo
# ID:            2098233287
# COPYRIGHT:     Copyright (c) 2026 Regenera Corporate
#
# LICENSE:       EULA (End-User License Agreement)
# PROTECTION:    PROPRIEDADE INTELECTUAL RESTRITA
#
# WARNING:       TODOS OS DIREITOS RESERVADOS. Proibida a cópia, distribuição,
#                engenharia reversa ou modificação não autorizada.
#
# |---------------------------------------------------------------------------------------|
# |  --> CLASSIFICATION: PROPRIETARY // DEVELOPER MAINTAINED // REQUIRES SENIOR REVIEW          |
# |---------------------------------------------------------------------------------------|

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: regenera-core-canary
  namespace: regenera-prod
spec:
  hosts:
    - "core.regenerabank.app"
  gateways:
    - mesh
    - istio-system/regenera-gateway
  http:
    - route:
        - destination:
            host: regenera-core-service
            subset: stable
          weight: 90
        - destination:
            host: regenera-core-service
            subset: canary
          weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: regenera-core-subsets
  namespace: regenera-prod
spec:
  host: regenera-core-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
